--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -15,7 +15,7 @@
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Annual Quota</span>&nbsp; AE assignments are given on a rolling basis, as
         submissions are received.
-        It is possible to change this default quota of 12 papers per year <a href="https://jmlr.org/tmlr/faq.html#ae-quota">through the openreview console</a>, as well as to mark yourself temporarily unavailable for periods such as illness, vacation or work leave.
+        The default quota is 12 papers per year, but it is possible to change it <a href="https://jmlr.org/tmlr/faq.html#ae-quota">through the openreview console</a>, as well as to mark yourself temporarily unavailable for periods such as illness, vacation or work leave.
         On the other
         hand, you are generally <span class="bold">expected to accept all AE requests</span> of
         submissions that fall within your expertise and quota. Acceptable exceptions are if you have a conflict of interest with one of the authors.</p>
