Fixed a couple of typos.

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@ div, iframe {
 
 
 <p>
-    Acting and founding Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google, Mila), <a href="http://www.raiahadsell.com/">Raia Hadsell</a> (DeepMind) and <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a> (Genentech, New York University), along with Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .     
+    Acting and founding Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Google, Mila), <a href="http://www.raiahadsell.com/">Raia Hadsell</a> (DeepMind) and <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a> (Genentech, New York University), along with Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a>.     
 </p>
 
 
@@ -43,7 +43,7 @@ div, iframe {
 
 
 <p>
-We use the reviewing and publication systems on <a href="https://openreview.net/">OpenReview</a> for openness and transparency. Stay tuned for submission instructions.
+We use the reviewing and publication systems on OpenReview for openness and transparency. See the author guidelines <a href="author-guide.html">here</a>, or proceed directly to <a href="https://openreview.net/group?id=TMLR">OpenReview</a> to start your submission.
     
 </p>
 
@@ -51,9 +51,9 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
 
 <h2>Advisory Board Members</h2>
 
-<p>TMLR&rsquo;s founding advisory board consists of nine experts who have contributed to and
-        extensive experiences in creating, maintaining and improving academic publication venues, conferences and
-        workshops in both machine learning and adjacent areas.</p>
+<p>TMLR&rsquo;s founding advisory board consists of nine experts who have
+        extensive experience in creating, maintaining and improving academic publication venues, conferences and
+        workshops in machine learning, artificial intelligence, and adjacent areas.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://yoshuabengio.org&amp;sa=D&amp;source=editors&amp;ust=1638370889694000&amp;usg=AOvVaw2dvEXQpnMnw5ct-DJ5MkS7">Yoshua
             Bengio</a>: Mila.</p>
