--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -52,7 +52,11 @@
         valuable judgement on the submission. You can use the volunteer reviewer&rsquo;s OpenReview profile to guide
         you in this decision. For instance, do not accept a volunteer reviewer with a profile that is incomplete,
         out of date or solely based on an unrecognizable personal email (as opposed to an institutional
-        email).</span></p>
+        email).</span><span>&nbsp;<br><br></span><span>
+        Once assigned, reviewers will be asked to acknowledge on OpenReview their responsibility to review this submission. 
+        This acknowledgement will be made visible to you on the OpenReview page of the submission. If the reviewer has not acknowledged 
+        their responsibility a couple of days after their assignment, consider reaching out to them directly to confirm.</span></p>
+
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Post-review discussion </span><span>&nbsp; Once the third review has been submitted,
         the authors are given a chance to take into account the reviewers&rsquo; feedback, answer any questions they
