Copied certification information here.

--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -154,15 +154,42 @@
       <span class="c2"/>
     </p>
     <p class="c1">
-      <span class="bold">Certification recommendations</span>
-      <span class="bold">  </span>
-      <span>Certifications</span>
-      <span> are meant to highlight particularly notable accepted submissions. Notably, it is through certifications that we make room for more speculative/editorial judgement on the significance and potential for impact of accepted submissions. Certification selection is the responsibility of the AE, however you are asked to submit your recommendation.</span>
+      <span class="c2">The AE will monitor the discussion and consult the reviewers' feedback and recommendations. When they are ready to make a decision on the submission, they will also evaluate and rate your review.</span>
     </p>
 
     <p class="c1">
-      <span class="c2">The AE will monitor the discussion and consult the reviewers' feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
+      <span class="bold">Certification recommendations</span>
+      <span class="bold">  </span>
+      <span>Certifications</span>
+      <span> are meant to highlight particularly notable accepted submissions, and act as public endorsements of the paper in a number of categories. Notably, it is through certifications that we make room for more speculative/editorial judgement on the significance and potential for impact of accepted submissions. Certification selection is the responsibility of the AE, however you are asked to submit your recommendation.</span>
     </p>
+    <ul class="c9 lst-kix_pfdlg1ai0z44-0 start">
+        <li><span class="bold">Outstanding Certification</span><span class="bold">.
+            </span><span>The editorial board of TMLR jointly awards this certification to papers which are deemed to be
+                exceptionally high quality and broadly significant for the field. The certification </span><span>may be
+                given well after the paper&rsquo;s initial publication in TMLR</span><span class="c1">&nbsp;(a year or
+                more), and is equivalent to a best paper award at a top-tier conference.</span></li>
+    </ul>
+    <p></p>
+    <p><span class="c1">The remaining four certifications are recommended by reviewers, nominated by action editors and must be
+            approved by at least one editor-in-chief:</span></p>
+    <ul class="c9 lst-kix_pfdlg1ai0z44-0">
+        <li><span class="bold">Featured Certification. </span><span class="c1">This
+                certification may be awarded to papers that are very high quality. These papers present significant
+                contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis.
+                If this paper was submitted to a top-tier conference, it would likely be presented as an
+                oral/spotlight.</span></li>
+        <li><span class="bold">Expert Reviewer Certification</span><span class="bold">.
+            </span><span>This is awarded to papers that are </span><span>authored</span><span class="c1">&nbsp;by
+                highly-rated TMLR reviewers, to recognize their contributions and expertise.</span></li>
+        <li><span class="bold">Reproducibility Certification. </span><span>This is awarded to
+                papers whose pri</span><span class="c1">mary purpose is reproduction of other published work. Beyond
+                simple verification, the paper must contribute significant added value through additional baselines,
+                analysis, ablations, or insights.</span></li>
+        <li><span class="bold">Survey</span><span class="bold">&nbsp;Certification.
+            </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
+                thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
+    </ul>
 
 
 {% endblock %}
