FIX: FAQ location

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <h1 class="c9" id="h.vj7gmpygyblc"><span class="italic0">Contact Information</span></h1>
-    <p class="c3"><span>Before contacting us, please make sure that your question is not answered in the FAQ below, or
+    <p class="c3"><span>Before contacting us, please make sure that your question is not answered in the <a href="https://jmlr.org/tmlr/faq.html">FAQ</a>, or
             in the </span><span class="italic2"><a class="c7"
                 href="https://www.google.com/url?q=https://openreview.net/faq&amp;sa=D&amp;source=editors&amp;ust=1638474872666000&amp;usg=AOvVaw2YfvMm8DFR6AkTgVd3xpAV">OpenReview
                 FAQ</a></span><span class="c0">. TMLR is run by a small team of volunteers; please be mindful before
