--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -55,11 +55,11 @@ div, iframe {
 <p class="framed"  style="font-size: 1.2em; margin: 2em">
     <b>Certifications</b><br>
 <span id="surveybadge" class="badge badge badge-info" >
-    <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Papers that provides an exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a> 
+    <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a> 
 </span>
 
 <span id="reproducibilitybadge" class="badge badge badge-success" >
-    <a href="#" id="reproducibilitybutton" data-toggle="tooltip" data-placement="top" title="Papers whose primary purpose is reproduction of other published work. Beyond verification, these papers add value through additional baselines, analysis, ablations, or insights." data-trigger="hover">Reproducibility</a> 
+    <a href="#" id="reproducibilitybutton" data-toggle="tooltip" data-placement="top" title="Reproduction of previously published work. Beyond verification, these papers add value through additional baselines, analysis, ablations, or insights." data-trigger="hover">Reproducibility</a> 
 </span>
 <!-- <span  class="badge badge badge-light" >
     <a href="#" id="clearselection" >clear </a> 
