--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -122,7 +122,7 @@
             that no statement would make the work ethically acceptable, reach out to the
        <a href="mailto:tmlr@jmlr.org">Editors-in-Chief</a>. </span>
     </p>
-    <h2 id="evaluation_criteria">Evaluation criteria and certifications</h2>
+    <h2 id="evaluation">Evaluation criteria and certifications</h2>
     <p><span class="c1">The acceptance decision for a submission is based on the answers to the following
             questions: </span></p>
     <ul class="c9 lst-kix_rmx32wqtge81-0 start">
