add certifications section

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -122,7 +122,7 @@
             that no statement would make the work ethically acceptable, reach out to the
        <a href="mailto:tmlr@jmlr.org">Editors-in-Chief</a>. </span>
     </p>
-    <h2 id="evaluation">Evaluation criteria and certifications</h2>
+    <h2 id="evaluation">Evaluation criteria</h2>
     <p><span class="c1">The acceptance decision for a submission is based on the answers to the following
             questions: </span></p>
     <ul class="c9 lst-kix_rmx32wqtge81-0 start">
@@ -139,6 +139,7 @@
             published work, and papers that merely re-implement an idea that has already been reproduced before.</span>
     </p>
     <p></p>
+    <h2 id="certifications">Certifications</h2>
     <p><span>Accepted papers will be automatically considered for a number of certifications that may be
             awarded by the </span><span>action editors or editors-in-chief</span><span class="c1">&nbsp;of TMLR. These
             certifications will act as public endorsements of the paper in a number of categories. The most prestigious
