Add a page on acceptance criteria

--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -5,7 +5,9 @@
 <h1 class="c1" id="h.9thkl4ire28v"><span class="c11 c12">TMLR guidelines for action editors</span></h1>
 <p class="c9"><span>This document provides instructions for </span><span>action editors (AE)</span>. Before
         reading this section, make sure to also read and be familiar with the <a href="editorial-policies.html">Editorial
-        Policies</a>, the <a href="reviewer-guide.html">Reviewer
+        Policies</a>, 
+        the <a href="acceptance-criteria.html">Acceptance criteria</a>,
+        the <a href="reviewer-guide.html">Reviewer
         guidelines</a>, the <a href="ethics.html">Ethics
         Guidelines</a>, and the <a href="code.html">Code of
         Conduct</a>.</p>
@@ -80,15 +82,15 @@
         recommendation to you on a decision for a submission no sooner than 2 weeks and no later than 4 weeks after
         the submission of the third review. </span></p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9"><span class="bold">Decision and certification </span><span>&nbsp; Once all 3 reviewer decision
-        recommendations have been submitted, y</span><span>ou should aim</span><span class="c4">&nbsp;to submit your
+<p class="c9"><span class="bold">Decision and certification </span> Once all 3 reviewer decision
+        recommendations have been submitted, you should aim to submit your
         decision proposal within 1 week. Your decision proposal should therefore be submitted within 5 weeks of the
         beginning of the discussion between authors and reviewers. If, and only if, authors and reviewers are still
-        discussing the submission, you may decide to take more time.</span></p>
+        discussing the submission, you may decide to take more time.</p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span>There are 3 possible outcomes: Accept, Accept with minor revision and Reject (see
 <a href="editorial-policies.html">Editorial Policies</a>). As described
-        in the <a href="reviewer-guide.html">Reviewer guidelines</a>, acceptance decisions should be made based on two criteria:</span></p>
+        in the <a href="acceptance-criteria.html">Acceptance criteria</a> page, acceptance decisions should be made based on two criteria:</span></p>
 <p class="c0"><span class="c3 c7"></span></p>
 <p class="c9"><span class="c3">Are the claims made in the submission supported by accurate, convincing and clear
         evidence?</span></p>
