--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,8 @@ ul li {
 
   <p align="right"> <a href="/tmlr/editorial-policies.html"> Submission guidelines and editorial policies</a> 
 
+  <p align="right"> <a href="/tmlr/acceptance-criteria.html"> Acceptance criteria</a> 
+
   <p align="right"> <a href="/tmlr/author-guide.html"> Author guidelines</a> 
 
   <p align="right"> <a href="/tmlr/reviewer-guide.html"> Reviewer guidelines</a> 
