--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -132,11 +132,11 @@
                 interested in knowing the findings of this paper?</span></li>
     </ul>
     <p></p>
-    <p><span>Papers should be accepted if they meet the criteria</span><span>, </span><span class="italic">even
-            if the contribution or significance of the work is modest</span><span>. </span><span>Papers that should not
+    <p>Papers should be accepted if they meet the criteria, <span class="italic">even
+            if the contribution or significance of the work is modest</span>. Papers that should not
             be accepted include papers that make bold statements unsupported by empirical or rigorous evidence, papers
-            that aren&rsquo;t clearly written, </span><span>papers that incorrectly claim novelty over existing
-            published work, and papers that merely re-implement an idea that has already been reproduced before.</span>
+            that aren&rsquo;t clearly written, papers that incorrectly claim novelty over existing
+            published work, and papers that merely re-implement an idea that has already been reproduced before. See the <a href="acceptance-criteria.html">Acceptance criteria</a> for a more thorough discussion. 
     </p>
     <p></p>
     <h2 id="certifications">Certifications</h2>
