--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -42,47 +42,9 @@
       <span>Submission Acceptance Standard</span>
     </h2>
     <p>
-      The <a href="editorial-policies.html">Editorial Policies</a> page provides a brief description of TMLR's acceptance criteria, which we expand further here.
+      Please see the page <a href="acceptance-criteria.html">Acceptance Criteria</a>.
     </p>
-    <p>
-      Acceptance of a submission to TMLR should be based on positive answers to the following two questions.
-    </p>
-    <p>
-      <span class="bold">Are the claims made in the submission supported by accurate, convincing and clear evidence?</span>
-    </p>
-    <p>
-      <span class="c1">This is the most important criteria. This implies assessing the technical soundness as well as the clarity of the narrative and arguments presented.</span>
-    </p>
-    <p class="c0">
-      <span class="c1"/>
-    </p>
-    <p>
-      <span class="c1">Any gap between claims and evidence should be addressed by the authors. Often, this will lead reviewers to ask the authors to provide more evidence by running more experiments. However, this is not the only way to address such concerns. Another is simply for the authors to adjust (reduce) their claims.</span>
-    </p>
-    <p class="c0">
-      <span class="c1"/>
-    </p>
-    <p>
-      <span class="bold">Would some individuals in TMLR's audience be interested in the findings of this paper?</span>
-    </p>
-    <p>
-      <span class="c1">This is arguably the most subjective criteria, and therefore needs to be treated carefully. Generally, a reviewer that is unsure as to whether a submission satisfies this criteria should assume that it does.</span>
-    </p>
-    <p class="c0">
-      <span class="c1"/>
-    </p>
-    <p>
-      <span>Crucially, it should </span>
-      <span class="c4">not</span>
-      <span> be used as a reason to reject work that isn't considered “significant” or “impactful” because it isn't achieving a new state-of-the-art on some benchmark. Nor should it form the basis for rejecting work on a method considered not “novel enough”, as novelty of the studied method is not a necessary criteria for acceptance. We explicitly avoid these terms (“significant”, “impactful”, “novel”), and focus instead on the notion of “interest”. If the authors make it clear that there is something to be learned by some researchers in their area from their work, then the criteria of interest is considered satisfied. </span>
-      <span class="c1">TMLR instead relies on certifications (such as “Featured” and “Outstanding”) to provide annotations on submissions that pertain to (more speculative) assertions on significance or potential for impact. </span>
-    </p>
-    <p class="c0">
-      <span class="c1"/>
-    </p>
-    <p>
-      <span>Here's an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn't surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.</span>
-    </p>
+
     <h2 class="c6" id="h.ragth3czmyw6">
       <span class="c8">Review Format</span>
     </h2>
