link from author guidelines

--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -4,7 +4,7 @@
 
     <h1>TMLR guidelines for authors</h1>
     <p class="c0"><span>This document provides instructions for authors. Authors are required to also read and be
-            familiar with the <a href="editorial-policies.html"> Editorial Policies</a>, the <a href="ethics.html">Ethics Guidelines</a>, and the <a href="code.html">Code of Conduct</a></p>
+            familiar with the <a href="editorial-policies.html"> Editorial Policies</a>, the <a href="acceptance-criteria.html">Acceptance Criteria</a> the <a href="ethics.html">Ethics Guidelines</a>, and the <a href="code.html">Code of Conduct</a></p>
     <h2 class="c5" id="h.x77xxp6dwm4e"><span class="c1">Overview of submission process</span></h2>
     <p class="c0"><span class="c3">TMLR uses a double blind review process and submissions must be anonymized. All
             authors must create author profiles and give conflict of interest information. They also must provide
