--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -12,7 +12,7 @@
             funding, competing interests and any conflict of interest not covered by the institutional history of the
             authors. Such information will not be disclosed to the reviewers, but will be once a decision on the
             manuscript has been made.</span></p>
-    <p class="c0 c8"><span class="c3"></span></p>
+
     <p class="c0"><span>Following submission, an action editor will be assigned and the paper will be evaluated to check
             that it meets the criteria for the review process; e.g. it should be in scope, anonymous, and complete. Then
             reviewers will be assigned to read and review the manuscript. An open-ended rebuttal, discussion, and
@@ -20,13 +20,13 @@
             editor will enter a decision, either </span><span class="bold">accept as is</span><span>, </span><span
             class="bold">accept with minor revisions</span><span>, or </span><span class="bold">reject</span>. See the
         <a href="editorial-policies.html">Submission Guidelines and Editorial Policies</a>, as well as the <a href="reviewer-guide.html">Reviewer</a> and <a href="ae-guide.html">Action Editor Guidelines</a>, for more information. </span></p>
-    <p class="c0 c8"><span class="c3"></span></p>
+
     <h2 class="c5" id="h.yrc9qs72su7m"><span class="c1">Broader impact statement</span></h2>
     <p class="c0"><span>If their work carries a significant risk of harm, authors are required to include a Statement of
             Broader Impact. The statement should include a concise, concrete description of potential positive and
             negative societal impact, as well as a discussion of possible mitigations. Please read the discussion in
         the <a href="ethics.html">Ethics Guidelines</a> for an in depth discussion of possible risks and mitigating factors. &nbsp;</span></p>
-    <h2 class="c5" id="h.s51t8e58eio9"><span>Format</span></h2>
+    <h2 class="c5" ><span>Format</span></h2>
     <p class="c0"><span>Submissions may be any length</span><span>, </span><span>but </span><span>a paper&rsquo;s length
             should be justified by its content and papers that are unusually long (not counting any Appendices) are
             likely to result in reviewing delays. Submissions must be PDF files generated using the
@@ -34,7 +34,7 @@
             and template</a>. The submission PDF may include an Appendix,
             after the references (for proofs, derivations or complimentary results). Looking at the Appendix is at the
             discretion of the reviewers.</span></p>
-    <p class="c0 c8"><span class="c3"></span></p>
+
     <p class="c0"><span class="c3">Authors may submit up to 100MB of supplementary material, such data, source code or
             illustrative videos; all supplementary materials must be in PDF or ZIP format. Supplementary material should
             be material created by the authors that directly supports the submission content. Like submissions,
